# air-script

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  backends.html  implementation.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json
air-dsl/: Cargo.toml
air-dsl/src/: main.rs
air-dsl/src/cli/: mod.rs  transpile.rs
air-dsl/tests/: helpers.rs
air-dsl/tests/aux_trace/: aux_trace.rs
air-dsl/tests/binary/: binary.rs
air-dsl/tests/periodic_columns/: periodic_columns.rs
air-script/: Cargo.toml  README.md
air-script-core/: Cargo.toml  README.md
air-script-core/src/: access.rs  comprehension.rs  constant.rs  expression.rs  identifier.rs  lib.rs  trace.rs  variable.rs
air-script/src/: lib.rs  main.rs
air-script/src/cli/: mod.rs  transpile.rs
air-script/tests/: helpers.rs  main.rs
air-script/tests/aux_trace/: aux_trace.air  aux_trace.json  aux_trace.masm  aux_trace.rs  generated_aux_trace.json
air-script/tests/binary/: binary.air  binary.json  binary.masm  binary.rs
air-script/tests/bitwise/: bitwise.air  bitwise.masm  bitwise.rs  bitwise_with_evaluator.air
air-script/tests/clk/: clk.air  clk.masm  constraints.masm
air-script/tests/codegen/: helpers.rs  masm.rs  mod.rs  winterfell.rs
air-script/tests/constant_in_range/: constant_in_range.air  constant_in_range.masm  constant_in_range.rs  constant_in_range_module.air
air-script/tests/constants/: constants.air  constants.json  constants.masm  constants.rs  generated_constants.json
air-script/tests/constraint_comprehension/: cc_with_evaluators.air  cc_with_evaluators.masm  constraint_comprehension.air  constraint_comprehension.masm  constraint_comprehension.rs
air-script/tests/evaluators/: evaluators.air  evaluators.masm  evaluators.rs
air-script/tests/exponentiation/: exponentiation.air  generated_exponentiation.json
air-script/tests/functions/: functions_complex.air  functions_complex.masm  functions_complex.rs  functions_simple.air  functions_simple.masm  functions_simple.rs  inlined_functions_simple.air
air-script/tests/index_col_access/: index_col_access.air  index_col_access.rs
air-script/tests/indexed_trace_access/: indexed_trace_access.air  indexed_trace_access.json  indexed_trace_access.masm  indexed_trace_access.rs
air-script/tests/list_comprehension/: list_comprehension.air  list_comprehension.masm  list_comprehension.rs
air-script/tests/list_folding/: list_folding.air  list_folding.masm  list_folding.rs
air-script/tests/periodic_columns/: periodic_columns.air  periodic_columns.masm  periodic_columns.rs
air-script/tests/pub_inputs/: pub_inputs.air  pub_inputs.json  pub_inputs.masm  pub_inputs.rs
air-script/tests/random_values/: random_values.air  random_values.json  random_values.rs  random_values_bindings.air  random_values_bindings.masm  random_values_simple.air  random_values_simple.masm
air-script/tests/selectors/: selectors.air  selectors.masm  selectors.rs  selectors_with_evaluators.air  selectors_with_evaluators.masm
air-script/tests/system/: system.air  system.json  system.masm  system.rs
air-script/tests/trace_col_groups/: trace_col_groups.air  trace_col_groups.json  trace_col_groups.masm  trace_col_groups.rs
air-script/tests/variables/: variables.air  variables.masm  variables.rs
codegen/gce/: Cargo.toml  README.md
codegen/gce/src/: boundary_constraints.rs  error.rs  expressions.rs  helpers.rs  lib.rs  transition_constraints.rs  utils.rs
codegen/masm/: Cargo.toml  README.md
codegen/masm/src/: codegen.rs  config.rs  constants.rs  error.rs  exemption_points.rs  lib.rs  utils.rs  visitor.rs  writer.rs
codegen/masm/tests/: test_aux.rs  test_basic_arithmetic.rs  test_boundary.rs  test_constants.rs  test_divisor.rs  test_exemption_points.rs  test_periodic.rs  utils.rs
codegen/winterfell/: Cargo.toml  README.md
codegen/winterfell/src/: imports.rs  lib.rs
ir/: Cargo.toml  README.md
ir/derive_graph/: Cargo.toml
ir/derive_graph/src/: lib.rs  node.rs
ir/src/: boundary_constraints.rs  boundary_stmts.rs  codegen.rs  declarations.rs  error.rs  helpers.rs  lib.rs  pub_inputs.rs  symbol_table.rs  trace_column.rs  trace_columns.rs
ir/src/constraint_builder/: boundary_constraints.rs  constrained_boundary.rs  evaluator_functions.rs  evaluators.rs  expression.rs  expression_details.rs  list_comprehension.rs  list_folding.rs  mod.rs  variables.rs
ir/src/constraints/: constraint.rs  degree.rs  graph.rs  list_comprehension.rs  list_folding.rs  mod.rs  utils.rs
ir/src/graph/: mod.rs
ir/src/integrity_stmts/: constraint.rs  degree.rs  graph.rs  mod.rs
ir/src/ir/: block.rs  constraints.rs  degree.rs  mod.rs  operation.rs  trace.rs  value.rs
ir/src/ir2/: graph.rs  graph2.rs  link.rs  mod.rs  operation.rs  value.rs
ir/src/passes/: constant_propagation.rs  inlining.rs  mod.rs  translate.rs  unrolling.rs  value_numbering.rs  visitor.rs
ir/src/symbol_table/: access_validation.rs  identifier_type.rs  list_comprehension.rs  list_folding.rs  mod.rs  parameter.rs  symbol.rs  symbol_access.rs  symbol_binding.rs  symbol_type.rs  test.rs  trace_column.rs  trace_columns.rs  value.rs
ir/src/tests/: access.rs  boundary_constraints.rs  constant.rs  constraint_comprehension.rs  evaluators.rs  functions.rs  integrity_constraints.rs  list_comprehension.rs  list_folding.rs  mod.rs  pub_inputs.rs  random_values.rs  selectors.rs  source_sections.rs  trace.rs  variables.rs
ir/src/transition_constraints/: degree.rs  graph.rs  mod.rs
ir/src/transition_stmts/: degree.rs  graph.rs  mod.rs
ir/src/validation/: error.rs  mod.rs  validator.rs
parser/: Cargo.toml  README.md
parser/src/: ast.rs  error.rs  grammar.lalrpop  lexer.rs  lib.rs  symbols.rs
parser/src/ast/: boundary_constraints.rs  constants.rs  declarations.rs  display.rs  errors.rs  evaluator_function.rs  expression.rs  function.rs  integrity_constraints.rs  mod.rs  module.rs  periodic_columns.rs  pub_inputs.rs  random_values.rs  statement.rs  trace.rs  transition_constraints.rs  (+2 more)
pass/: Cargo.toml
pass/src/: lib.rs
(+167 files in other folders)
