[package]
name = "air-script"
version = "0.2.0"
description="AirScript language compiler"
authors = ["miden contributors"]
readme="README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/air-script"
documentation = "https://0xpolygonmiden.github.io/air-script/"
categories = ["compilers", "cryptography"]
keywords = ["air", "stark", "zero-knowledge", "zkp"]
edition = "2021"
rust-version = "1.65"

[[bin]]
name = "airc"
path = "src/main.rs"

[dependencies]
codegen-winter = { package = "air-codegen-winter", path = "../codegen/winterfell", version = "0.2.0" }
env_logger = "0.10.0"
ir = { package = "air-ir", path = "../ir", version = "0.2.0" }
log = { version = "0.4", default-features = false }
miden-diagnostics = { git = "https://github.com/0xPolygonMiden/miden-diagnostics" }
parser = { package = "air-parser", path = "../parser", version = "0.2.0" }
clap = {version = "4.2", features = ["derive"]}

[dev-dependencies]
winter-air = { package = "winter-air", version = "0.5.1", default-features = false }
winter-math = { package = "winter-math", version = "0.5.1", default-features = false }
winter-utils = { package = "winter-utils", version = "0.5.1", default-features = false }
expect-test = "1.4.0"
