[package]
name = "air-script"
version = "0.4.0"
description = "AirScript language compiler"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/air-script"
documentation = "https://0xpolygonmiden.github.io/air-script/"
categories = ["compilers", "cryptography"]
keywords = ["air", "stark", "zero-knowledge", "zkp"]
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "airc"
path = "src/main.rs"

[dependencies]
air-ir = { package = "air-ir", path = "../ir", version = "0.4" }
air-parser = { package = "air-parser", path = "../parser", version = "0.4" }
air-pass = { package = "air-pass", path = "../pass", version = "0.1" }
air-codegen-masm = { package = "air-codegen-masm", path = "../codegen/masm", version = "0.4" }
air-codegen-winter = { package = "air-codegen-winter", path = "../codegen/winterfell", version = "0.4" }
clap = { version = "4.2", features = ["derive"] }
env_logger = "0.10"
log = { version = "0.4", default-features = false }
miden-diagnostics = "0.1"

[dev-dependencies]
expect-test = "1.4"
winter-air = { package = "winter-air", version = "0.6", default-features = false }
winter-math = { package = "winter-math", version = "0.6", default-features = false }
winter-utils = { package = "winter-utils", version = "0.6", default-features = false }
