[package]
name = "air-ir"
version = "0.1.0"
description="Intermediate representation for the AirScript language"
authors = ["miden contributors"]
readme="README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/air-script"
categories = ["compilers", "cryptography"]
keywords = ["air", "stark", "zero-knowledge", "zkp"]
edition = "2021"
rust-version = "1.65"

[dependencies]
air-script-core = {package = "air-script-core", path="../air-script-core", version="0.1.0" }
parser = { package = "air-parser", path = "../parser", version = "0.1.0" }
