[package]
name = "air-ir"
version = "0.2.0"
description="Intermediate representation for the AirScript language"
authors = ["miden contributors"]
readme="README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/air-script"
categories = ["compilers", "cryptography"]
keywords = ["air", "stark", "zero-knowledge", "zkp"]
edition = "2021"
rust-version = "1.65"

[dependencies]
air-parser = { path = "../parser", version = "0.2.0" }
air-pass = { path = "../pass", version = "0.1.0" }
anyhow = "1.0"
miden-diagnostics = { git = "https://github.com/0xpolygonmiden/miden-diagnostics" }
thiserror = "1.0"
