[package]
name = "air-ir"
version = "0.4.0"
description = "Intermediate representation for the AirScript language"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/air-script"
categories = ["compilers", "cryptography"]
keywords = ["air", "stark", "zero-knowledge", "zkp"]
rust-version.workspace = true
edition.workspace = true

[dependencies]
air-parser = { package = "air-parser", path = "../parser", version = "0.4" }
air-pass = { package = "air-pass", path = "../pass", version = "0.1" }
anyhow = "1.0"
miden-diagnostics = "0.1"
thiserror = "1.0"
