[package]
name = "air-parser"
version = "0.2.0"
description="Parser for the AirScript language"
authors = ["miden contributors"]
readme="README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/air-script"
categories = ["compilers", "cryptography", "parser-implementations"]
keywords = ["air", "stark", "zero-knowledge", "zkp"]
edition = "2021"
rust-version = "1.65"

[build-dependencies]
lalrpop = { version = "0.20.0", default-features = false }

[dependencies]
air-pass = { path = "../pass", version = "0.1.0" }
miden-diagnostics = { git = "https://github.com/0xPolygonMiden/miden-diagnostics" }
miden-parsing = { git = "https://github.com/0xPolygonMiden/miden-parsing" }
lalrpop-util = { version = "0.20.0" }
lazy_static = "1.4"
petgraph = "0.6"
regex = "1"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.0"
