[package]
name = "air-pass"
version = "0.1.0"
description="Provides reusable compiler pass infrastructure for the AirScript compiler"
authors = ["Paul Schoenfelder"]
license = "Apache 2.0"
repository = "https://github.com/0xPolygonMiden/air-script"
categories = ["compilers"]
edition = "2021"
rust-version = "1.65"

[dependencies]
