[package]
name = "air-pass"
version = "0.1.0"
description = "Reusable compiler pass infrastructure for the AirScript compiler"
authors = ["Paul Schoenfelder"]
license = "MIT"
repository = "https://github.com/0xPolygonMiden/air-script"
categories = ["compilers"]
edition = "2021"
rust-version = "1.67"

[dependencies]
