[package]
name = "air-codegen-masm"
version = "0.1.0"
edition = "2021"

[dependencies]
air-ir = { path = "../../ir", version = "0.2.0" }
anyhow = "1.0"
winter-prover = { version = "0.6", default-features = false }
miden-processor = { git = "https://github.com/0xPolygonMiden/miden-vm", features = ["internals"], default-features = false }
thiserror = "1.0"

[dev-dependencies]
air-parser = { path = "../../parser", version = "0.2.0" }
air-pass = { path = "../../pass" }
miden = "0.3.0"
miden-diagnostics = { git = "https://github.com/0xpolygonmiden/miden-diagnostics" }
miden-assembly = { git = "https://github.com/0xPolygonMiden/miden-vm", default-features = false }
