[package]
name = "air-codegen-masm"
version = "0.4.0"
description = "Miden Assembly code generator for the AirScript language"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/air-script"
categories = ["compilers", "cryptography"]
keywords = ["air", "stark", "winterfell", "zero-knowledge", "zkp"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
air-ir = { package = "air-ir", path = "../../ir", version = "0.4" }
anyhow = "1.0"
miden-core = { package = "miden-core", version = "0.6", default-features = false }
thiserror = "1.0"
winter-math = { package = "winter-math", version = "0.6", default-features = false }

[dev-dependencies]
air-parser = { path = "../../parser" }
air-pass = { path = "../../pass" }
miden-assembly = { package = "miden-assembly", version = "0.6", default-features = false }
miden-processor = { package = "miden-processor", version = "0.6", features = [
    "internals",
], default-features = false }
miden-diagnostics = "0.1"
winter-air = { package = "winter-air", version = "0.6", default-features = false }
