[package]
name = "air-codegen-winter"
version = "0.4.0"
description = "Winterfell code generator for the AirScript language"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/air-script"
categories = ["compilers", "cryptography"]
keywords = ["air", "stark", "winterfell", "zero-knowledge", "zkp"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
air-ir = { package = "air-ir", path = "../../ir", version = "0.4" }
anyhow = "1.0"
codegen = "0.2"
